Bug 1338691 - Add a pref for delaying tracking timeout throttling after the page load finishes; r=bkelly